minor changes in PluginHelper class